<resources>
    <string name="app_name">我爱记单词</string>
    <!-- 欢迎页面数据 -->
    <string name="welcome">欢迎使用我爱记单词</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="app_info">201819914 朱赫</string>

    <!-- 用户页面数据 -->
    <string name="login_info">用户登录</string>
    <string name="register_info">用户注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>

    <!-- 单词页面数据 -->
    <string name="word_list">单词列表</string>
    <string name="word_add">添加单词</string>
    <string name="word_modify">修改单词</string>
    <string name="word_setting">设置</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <!-- 设置页面数据 -->
    <string name="upload">上传用户数据</string>
    <string name="download">下载示例单词</string>
    <string name="restore">恢复用户数据</string>
    <string name="log">查看用户日志</string>
    <string name="logout">退出登录</string>

    <!-- 日志页面数据 -->
    <string name="log_info">用户日志</string>

    <string name="insert">添加</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="search">查询</string>

</resources>